--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -1074,11 +1074,27 @@ Expected: Similar to previous.
 Expected: An overall ledger with 4 individual ledgers will be added into the list of ledgers in the Ledger tab.
 
 .. Test case: `split $/1000 n/Amy n/Betty` +
-Expected: No ledgers is added. Error details will be shown in the status message.
+Expected: No ledger is added. Error details will be shown in the status message.
 
 .. Other incorrect `split` command to try: `split $/1000 n/Amy n/Betty a/HaiDiLao s/1 s/2 s/3 s/4`
 (Greater number of shares than number of people). +
 Expected: Similar to previous.
+
+. Adding a receive ledger with the command: `receive`
+
+.. Prerequisites:
+
+.. Test case: `receive $/20 n/Albert` +
+Expected: An overall ledger with an individual ledger will be added into the list of ledgers in the ledger tab.
+
+.. Test case: `receive $/20 n/A|bert` +
+Expected: No ledger is added. Error details will be shown in the status message.
+
+.. Other incorrect `receive` command to try: `receive $/20.001 n/Albert` (Amount cannot have more than
+two decimal places). +
+Expected: Similar to previous.
+
+
 
 === Deleting a Person
 
