--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -253,7 +253,7 @@ image::ListcatStep3.png[width="600"]
 === Add general Deadlines: `deadline t>TASK d>DUEDATE`
 
 This command adds a general `Deadline` into a list. The list will be displayed on the right-side pane.
-Note: [DUEDATE] has to be in dd/MM/yyyy format.
+Note: `DUEDATE` has to be in dd/MM/yyyy format.
 
 You can refer to the example below.
 `deadline t>CS2103 Exam d>10/12/2019`
@@ -267,7 +267,7 @@ image::deadline-entered.png[width="600"]
 
 NOTE: Note that `Deadline`(s) entered will be sorted in ascending order i.e. earliest `Deadline` on index 1
 
-CAUTION: `Deadline`(s) can only be after the current date. Earlier `DUEDATE` are invalid.
+CAUTION: `Deadline`(s) can only be after the current date. Leap year dates are also taken into account.
 
 === Remove deadline from list: `remove index`
 
@@ -321,7 +321,7 @@ NOTE: Bad Questions will be added to a deadline which is due 3 days later. This 
 the theory of https://en.wikipedia.org/wiki/Spaced_repetition[Spaced Repetition], referring to Ebbinghaus Forgetting Curve
 by Hermann Ebbinghaus who hypothesised this theory in 1985.
 
-=== List all "Bad" FlashCards for a specific date `bad d>DATE`
+=== List all "Bad" FlashCards for a specific date `listbad d>DATE`
 
 List all the "Bad" rated FlashCards from a specific date. The FlashCard Questions will be shown.
 
@@ -331,7 +331,7 @@ image::listbad.png[width="600"]
 
 NOTE: The automated test mode for the "Bad" `FlashCard` is not functional at this point and will be implemented in KFC v2.0.
 
-=== Remove a specific "Bad" FlashCard for a specific date `bad d>DATE i>INDEX`
+=== Remove a specific "Bad" FlashCard for a specific date `removebad d>DATE i>INDEX`
 
 You can remove a specific "Bad" rated `FlashCard` from the list
 
@@ -339,11 +339,12 @@ You can remove a specific "Bad" rated `FlashCard` from the list
 
 You can refer to the example above.
 
-As seen from before, after listing all the "Bad" rated FlashCards for a specific date using `listbad d>12/11/2019`, you can observe the full list as seen below.
+As seen from before, after listing all the "Bad" rated FlashCards for a specific date using `listbad d>14/11/2019`, you can observe the full list as seen below.
 
 image::listbad.png[width="600"]
 
-Afterwards, you can choose to remove as specific "Bad" rated FlashCard from that list. Using the example `removebad d>12/11/2019 i>2`, you can observe this.
+Afterwards, you can choose to remove as specific "Bad" rated FlashCard from that list.
+Using the example `removebad d>14/11/2019 i>2`, you can observe this.
 
 image::removebad.png[width="600"]
 
@@ -359,7 +360,7 @@ NOTE: Using the `remove` command to remove a "ToDo: Bad Questions" Deadline does
 === Test mode: `start`
 
 
-==== Start command: `start [category]`
+==== Start command: `start category`
 This command starts the flashcard test mode. If no parameter is supplied, the application will test all
 available FlashCards.
 
@@ -540,7 +541,7 @@ Note that the second and third chart will be empty if the `stats` command is exe
 
 //tag::theme[]
 
-=== Change color themes: `theme [THEMENAME]`
+=== Change color themes: `theme THEMENAME`
 
 This command allows you to change the theme of the app.
 
@@ -591,7 +592,7 @@ To exit:
 == FAQ
 
 *Q*: How will the program know the correct answer to the questions? +
-*A*: You have to key in the answer manually when you create the question - it’s similar to a real set of flashcards.
+*A*: You have to key in the answer manually when you create the question - it’s similar to a real set of FlashCards.
 
 *Q*: How does the reminder system work? +
 *A*: You select a category and a date, and the program will remind you to revise that category when the date comes.
@@ -602,8 +603,8 @@ To exit:
 *Q*: Will I be able to resume the test from where I left off after I have stopped? +
 *A*: No. The program does not support that.
 
-*Q*: Can I change the category of a flashcard? +
-*A*: Yes, it will be one of the fields you can change when you edit the flashcard. Do note that after you change the category, you will have to refer to it using its new category and ID.
+*Q*: Can I change the category of a FlashCard? +
+*A*: Yes, it will be one of the fields you can change when you edit the FlashCard. Do note that after you change the category, you will have to refer to it using its new category and ID.
 
 *Q*: Can I use my mouse to interact with the user interface? +
 *A*: Yes, but only to a very small extent, like closing the window. This application is targeted primarily at keyboard users.
@@ -620,23 +621,20 @@ e.g. `add q>1+1 a>2`
 * Set a `FlashCard` as bad - `bad INDEX` +
 e.g.  `bad 2`
 * Show Calendar of all `Deadline`(s) - `calendar`
-* Clear all the `FlashCard` - `clear` +
-e.g. `clear`
+* Clear all the `FlashCard` - `clear`
 * Add a new Deadline - `deadline t>TASK d>DUE DATE` +
 e.g.  `deadline t>Math Test d>01/10/2020`
 * Delete an existing `FlashCard` - `delete INDEX` +
 e.g.  `delete 10`
-* Edit an existing `FlashCard` - `edit INDEX {fields wanted to edit}…​` +
+* Edit an existing `FlashCard` - `edit INDEX {fields to edit}…​` +
 e.g.  `edit 2 c>CS2103`
 * End `FlashCard` test - `end`
 * Export all flashcards under a specific category, to a specific filepath - `export c>CATEGORY p>FILE_PATH` +
 e.g.  `export c>CS2105 p>C:\Users\User\Documents\cheat_sheet.docx`
-* Get full list of commands - `help` +
-e.g.  `help`
+* Get full list of commands - `help`
 * Import `FlashCard`(s) from a JSON file - `import p>FILE_PATH` +
 e.g.  `import p>C:\Users\User\Documents\flashcards.json`
-* List all `FlashCard`(s) - `list`
-* List all flashcards under a specific category - `list [category]` +
+* List all flashcards under a specific category - `list CATEGORY` +
 e.g.  `list Math`
 * List all `FlashCard`(s) - `listall`
 * List all "Bad" `FlashCard`(s) - `listbad`
@@ -645,11 +643,12 @@ e.g.  `remove 2`
 * Remove a "Bad" rated `FlashCard` from list - `removebad INDEX` +
 e.g.  `removebad 2`
 * Search for `FlashCard`(s) - `search`
-** `search` KEYWORD(S)  e.g `search c`
-** `searchqn` KEYWORD(S)  e.g `searchqn pointer`
-** `searchans` KEYWORD(S)  e.g `searchans name`
-* Start a certain topic of `FlashCard`(s) - `start KEYWORD` +
+** `search KEYWORD(S)`  e.g `search c`
+** `searchans KEYWORD(S)`  e.g `searchans name`
+** `searchqn KEYWORD(S)`  e.g `searchqn pointer`
+* Start a certain topic of `FlashCard`(s) - `start CATEGORY` +
 e.g.  `start Mathematics`
 * View overall statistics - `stats`
-* Change theme - `theme dark`
+* Change theme - `theme THEMENAME` +
+e.g. `theme dark`
 
